# paas-autoscaler-monitor

./: Procfile  README.md  example.env  manifest.yml  pyproject.toml  requirements.in  requirements.txt
.circleci/: config.yml
config/: settings.py  urls.py
core/: pagerduty.py  slack.py
scanner/: models.py  urls.py
scanner/management/commands/: apps_bound_autoscaler.py  cf-autoscale-checker.py  check_app_scaling.py
scanner/migrations/: 0001_initial.py  0002_autoscalestaus_max_count.py  0002_remove_autoscalestaus_graph_url.py  0003_autoscalestaus_pd_dedup_key.py
scanner/templates/: home-page.html
