[tool.poetry]
name = "paas-autoscaler-monitor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = ">=3.7.4"
dj-database-url = "^2.2.0"
django = "^4.2.16"
django-environ = "^0.11.2"
django-jquery = "^3.1.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
raven = "^6.10.0"
sentry-sdk = "^2.8.0"
django-staff-sso-client = "4.2.1"
cloudfoundry-client = ">=1.16.0"
whitenoise = "^6.7.0"
gunicorn = "^23.0.0"
pdpyras = "^5.2.0"
urllib3 = ">=1.26.5"
protobuf = ">=3.19.5"
oauthlib = "3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
